# SwiftyTypst

./: .gitignore  Cargo.toml  Makefile  Package.swift  build.rs  rust-toolchain.toml
Sources/SwiftyTypst/: SwiftyTypst.swift
SwiftyTypstFFI.xcframework/: Info.plist
SwiftyTypstFFI.xcframework/ios-arm64/Headers/: SwiftyTypstFFI.h
SwiftyTypstFFI.xcframework/ios-arm64_x86_64-maccatalyst/Headers/: SwiftyTypstFFI.h  module.modulemap
SwiftyTypstFFI.xcframework/ios-arm64_x86_64-simulator/Headers/: SwiftyTypstFFI.h
SwiftyTypstFFI.xcframework/macos-arm64_x86_64/Headers/: SwiftyTypstFFI.h
indexmap-patch/src/: lib.rs  map.rs
src/: lib.rs  system_world.rs  typst.udl  typst_bindings.udl
src/cli_glue/: file_manager.rs  file_reader.rs  font_reader.rs  font_searcher.rs  fonts.rs  mod.rs  package.rs  path_hash.rs  path_slot.rs  system_world.rs
src/compiler/: autocomplete.rs  compile.rs  delegate.rs  highlight.rs  mod.rs
src/utilities/: mod.rs  source_location.rs  source_range.rs
