[package]
name = "typst-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "typst_bindings"

[features]
default = ["embed-fonts"]
embed-fonts = []

[profile.release]
strip = true
lto = true

[dependencies]
atty = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
codespan-reporting = "0.11"
comemo = "0.3.0"
dirs = "5"
flate2 = "1"
inferno = "0.11.15"
memmap2 = "0.5"
notify = "5"
once_cell = "1"
open = "4.0.2"
siphasher = "0.3"
tempfile = "3.5.0"
walkdir = "2"
tar = "0.4"
typst = { git = "https://github.com/typst/typst", tag = "v0.6.0" }
typst-library = { git = "https://github.com/typst/typst", tag = "v0.6.0" }
uniffi = { version = "0.24.1", features = ["cli"] }
ureq = "2"

[build-dependencies]
uniffi = { version = "0.24.1", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
