[package]
name = "typst-bindings"
version = "0.8.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "typst_bindings"

[profile.dev]
debug = true
debug-assertions = true
overflow-checks = true
strip = false
lto = false
opt-level = 0

[profile.release]
strip = true
lto = "fat"
opt-level = "z"

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
comemo = "0.3"
dirs = "5"
flate2 = "1"
memmap2 = "0.7"
once_cell = "1"
siphasher = "0.3"
tar = "0.4"
typst = { git = "https://github.com/typst/typst", tag = "v0.8.0" }
typst-library = { git = "https://github.com/typst/typst", tag = "v0.8.0" }
uniffi = { version = "0.24.3", features = ["cli"] }
ureq = "2"
walkdir = "2"

[replace]
# This patch is required for Mac Catalyst. It's not yet std-compatible, so we build with -Z build-std.
# But autocfg does not recognise that, making it impossible to compile the "plist" crate for Mac Catalyst.
"indexmap:1.9.3" = { path = "indexmap-patch" }

[build-dependencies]
uniffi = { version = "0.24.3", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
